validation & logger middleware
